# PrototypeEngine

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/common/: CCharacterSet.h  CCommand.cpp  CCommand.h  CCommandLine.cpp  CCommandLine.h  CFile.h  CMakeLists.txt  CNetworkBuffer.cpp  CNetworkBuffer.h  Common.h  FilePaths.cpp  FilePaths.h  FileSystem2.h  ICommandLine.h  IMetaLoader.h  IMetaTool.h  Logging.cpp  Logging.h  Platform.cpp  Platform.h  StringUtils.h  Tokenization.h
src/common/lib/: CLibrary.cpp  CLibrary.h  LibConstants.cpp
src/engine/: CEngine.cpp  CEngine.h  CFileSystemWrapper.cpp  CFileSystemWrapper.h  CMakeLists.txt  CVideo.cpp  CVideo.h  Engine.cpp  Engine.h  EngineInterface.cpp  EngineInterface.h  GLUtils.cpp  GLUtils.h  SteamWrapper.cpp  SteamWrapper.h
src/engine/VGUI1/: CMakeLists.txt  CVGUI1App.cpp  CVGUI1App.h  CVGUI1Surface.cpp  CVGUI1Surface.h  VGUI_RDBitmapTGA.cpp  VGUI_RDBitmapTGA.h  vgui_loadtga.cpp  vgui_loadtga.h
src/engine/console/: CCVarSystem.cpp  CCVarSystem.h  CCommandBuffer.cpp  CCommandBuffer.h  CMakeLists.txt  ConCommand_t.h
src/filesystem/: CFileHandle.cpp  CFileHandle.h  CFileSystem.cpp  CFileSystem.h  CMakeLists.txt  CSearchPath.h  PackFile.h
src/metaloader/: CMakeLists.txt  CMetaLoader.cpp  CMetaLoader.h  EngineInterface.cpp  EngineInterface.h  client.def
src/steam/: CMakeLists.txt  SteamWrapper.cpp  SteamWrapper.h
src/tier1/: CCommandLine.cpp  CCommandLine.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  ICommandLine.h  Tier1.h
