add_sources(
	ByteSwap.h
	ByteSwap.cpp
	CCharacterSet.h
	CCommand.h
	CCommand.cpp
	CFile.h
	CNetworkBuffer.h
	CNetworkBuffer.cpp
	Common.h
	FilePaths.h
	FilePaths.cpp
	FileSystem2.h
	IMetaLoader.h
	IMetaTool.h
	Logging.h
	Logging.cpp
	Platform.h
	Platform.cpp
	StringUtils.h
	StringUtils.cpp
	Tokenization.h
	Tokenization.cpp
)

add_subdirectory( lib )
